# xt16-go2-dlio-slam

./: README.md  faq.html
docker/: Dockerfile  humble.sh
humble_ws/src/: test_catmux.yaml
humble_ws/src/direct_lidar_inertial_odometry/cfg/: dlio.yaml  params.yaml
humble_ws/src/direct_lidar_inertial_odometry/launch/: dlio.launch.py  dlio.rviz
humble_ws/src/go2_unitree_ros2/: CMakeLists.txt  package.xml
humble_ws/src/go2_unitree_ros2/src/devel/: imu_publisher.cpp
humble_ws/src/unitree_ros2/: setup.sh
humble_ws/src/unitree_ros2/cyclonedds_ws/install/: local_setup.sh  setup.sh
humble_ws/src/unitree_ros2/cyclonedds_ws/install/unitree_api/share/unitree_api/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
humble_ws/src/unitree_ros2/cyclonedds_ws/install/unitree_api/share/unitree_api/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  unitree_apiConfig-version.cmake  unitree_apiConfig.cmake
humble_ws/src/unitree_ros2/cyclonedds_ws/install/unitree_api/share/unitree_api/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
humble_ws/src/unitree_ros2/cyclonedds_ws/install/unitree_api/share/unitree_api/msg/: Request.idl  Request.msg  RequestHeader.idl  RequestHeader.msg  RequestIdentity.idl  RequestIdentity.msg  RequestLease.idl  RequestLease.msg  RequestPolicy.idl  RequestPolicy.msg  Response.idl  Response.msg  ResponseHeader.idl  ResponseHeader.msg  ResponseStatus.idl  ResponseStatus.msg
humble_ws/src/unitree_ros2/cyclonedds_ws/install/unitree_go/share/unitree_go/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
humble_ws/src/unitree_ros2/cyclonedds_ws/install/unitree_go/share/unitree_go/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  unitree_goConfig-version.cmake  unitree_goConfig.cmake
humble_ws/src/unitree_ros2/cyclonedds_ws/install/unitree_go/share/unitree_go/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
humble_ws/src/unitree_ros2/cyclonedds_ws/install/unitree_go/share/unitree_go/msg/: AudioData.idl  AudioData.msg  BmsCmd.idl  BmsCmd.msg  BmsState.idl  BmsState.msg  Error.idl  Error.msg  Go2FrontVideoData.idl  Go2FrontVideoData.msg  HeightMap.idl  HeightMap.msg  IMUState.idl  IMUState.msg  InterfaceConfig.idl  InterfaceConfig.msg  LidarState.idl  LidarState.msg  LowCmd.idl  LowCmd.msg  LowState.idl  LowState.msg  MotorCmd.idl  MotorCmd.msg  MotorCmds.idl  MotorCmds.msg  MotorState.idl  MotorState.msg  MotorStates.idl  MotorStates.msg  PathPoint.idl  PathPoint.msg  Req.idl  Req.msg  Res.idl  Res.msg  SportModeCmd.idl  SportModeCmd.msg  SportModeState.idl  SportModeState.msg  (+8 more)
humble_ws/src/unitree_ros2/cyclonedds_ws/log/: latest_build
(+512 files in other folders)
